# Rustume

./: .boundary-allowlist  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .hadolint.yaml  .lintro-config.yaml  .lintro-ignore  .markdownlint.yaml  .osv-scanner.toml  .sqlfluff  .sqlfluffignore  .yamllint  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICES  clippy.toml  docker-compose.yml  findings.md  pyproject.toml  renovate.json  rustfmt.toml
.github/: CODEOWNERS  actionlint.yaml  labeler.yml  pages-bundle-manifest.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/actions/post-pr-comment/: action.yml
.github/workflows/: README.md  auto-rerun-on-infra-failure.yml  auto-tag-on-main.yml  boundary-guard.yml  build-binary.yml  ci-lintro-analysis.yml  codeql.yml  coverage.yml  db-backup.yml  dependency-review.yml  deploy-pages.yml  deploy-railway-cloud.yml  docker-build-publish.yml  ghcr-cleanup.yml  pr-auto-assign.yml  pr-labeler.yml  publish-release-on-tag.yml  quality-lint.yml  release-version-pr.yml  renovate.yml  scorecards.yml  security-dependency-review.yml  semantic-pr-title.yml  semantic-release.yml  site-quality.yml  terraform-validate.yml  test-backup-shell.yml  test-boundary-shell.yml  test-ci.yml  test-docker-shell.yml  test-e2e-web.yml  test-railway-shell.yml  test-rust.yml  test.yml  validate-action-pinning.yml  vuln-suppression-check.yml
.semgrep/: boundary-topology.yml
apps/site/: .gitignore  astro.config.mjs  package.json  tsconfig.json
apps/site/scripts/: copy-assets.mjs  enrich-docs-content.py  link-http-status.py  link-rustume-mentions.py
apps/web/: .gitignore  .oxlintrc.json  README.md  eslint.config.js  generate-icons.js  index.html  package.json  playwright.config.ts  tsconfig.e2e.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/e2e/: accessibility.spec.ts  import.spec.ts  offline.spec.ts  pdf-export.spec.ts  resume-crud.spec.ts  smoke.spec.ts  template-switching.spec.ts  visual.spec.ts
apps/web/scripts/: copy-wasm.js  e2e-build.js
apps/web/src/: App.tsx  index.css  index.tsx
bindings/wasm/: Cargo.toml
bindings/wasm/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: cli_tests.rs
crates/parser/: Cargo.toml
crates/parser/src/: dispatch.rs  json_resume.rs  lib.rs  linkedin.rs  reactive_resume_v3.rs  traits.rs
crates/parser/tests/: integration_tests.rs
crates/render/: Cargo.toml
crates/render/src/: lib.rs  traits.rs
crates/render/src/typst_engine/: engine.rs  mod.rs  world.rs
crates/render/src/typst_engine/templates/: _common.typ  azurill.typ  bronzor.typ  chikorita.typ  ditto.typ  gengar.typ  glalie.typ  kakuna.typ  leafish.typ  nosepass.typ  onyx.typ  pikachu.typ  rhyhorn.typ
crates/render/tests/: integration_tests.rs
crates/schema/: Cargo.toml
crates/schema-macros/: Cargo.toml
crates/schema-macros/src/: lib.rs
crates/schema/src/: basics.rs  lib.rs  metadata.rs  sections.rs  shared.rs  validation.rs
crates/server/: Cargo.toml
crates/server/src/: app.rs  cloud.rs  config.rs  dto.rs  email.rs  encryption.rs  error.rs  lib.rs  main.rs  net.rs  observability.rs  openapi.rs  run.rs  shutdown.rs  state.rs  storage.rs  test_support.rs
crates/server/src/audit/: mod.rs
crates/server/src/auth/: api_key.rs  mod.rs  session.rs  username.rs  workos.rs
crates/server/src/billing/: mod.rs  paddle.rs
crates/server/src/db/: mod.rs  models.rs  snapshots.rs
crates/server/src/db/migrations/: 001_initial.sql  002_cloud_indexes.sql  003_user_profile.sql  004_unique_email.sql  005_audit_events.sql  006_audit_events_actor_fk.sql  007_encrypt_at_rest.sql  007_paddle_customer_unique.sql  007_policy_acceptances.sql  008_resume_snapshots.sql  008_validate_encrypt_constraints.sql  009_api_keys.sql  010_usernames.sql
crates/server/src/middleware/: auth.rs  mod.rs  rate_limit.rs  security.rs  subscription.rs
crates/server/src/policy/: mod.rs
crates/server/src/routes/: account.rs  api_keys.rs  auth.rs  export.rs  health.rs  metrics.rs  mod.rs  parse.rs  public.rs  render.rs  resumes.rs  security_txt.rs  static_files.rs  templates.rs  validate.rs
crates/server/src/subscription/: mod.rs
crates/server/src/validation/: json_limits.rs  mod.rs
crates/storage/: Cargo.toml
crates/storage/src/: indexeddb.rs  lib.rs  memory.rs  traits.rs
crates/storage/tests/: integration_tests.rs
crates/utils/: Cargo.toml
crates/utils/src/: color.rs  date.rs  html_to_typst.rs  id.rs  layout.rs  lib.rs  sanitize.rs  string.rs
docker/: .env.example  Dockerfile  Dockerfile.railway  docker-compose.yml
docs/: deployment.md
docs/operations/: backup-restore.md  rustume-cloud-deploy.md  secrets-rotation.md
docs/rfc/: 0001-local-cloud-linking.md  0002-local-cloud-linking.md  README.md
docs/rfcs/: 0001-e2e-encryption.md
infra/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/environments/: production.tfvars  staging.tfvars
infra/modules/cloudflare-dns/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/monitoring/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/neon/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/r2/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
infra/modules/railway/: .terraform.lock.hcl  README.md  main.tf  outputs.tf  variables.tf  versions.tf
scripts/: migrate-i18n.py
scripts/ci/: check-vuln-suppressions.sh  ci-log.sh  ci-pr-comment.sh  classify-suppressions.py  fail-audit.sh  fail-on-lint.sh  format-security-comment.py  pull-lintro-image.sh  security-audit.sh
scripts/ci/backup/: backup-db.sh  dry-run-backup.sh  install-postgresql-client.sh  prune-backups.sh  test.sh  verify-backup-secrets.sh
scripts/ci/boundary/: check_content.sh  check_paths.sh
scripts/ci/site/: build.sh  (+11 more)
scripts/utils/: install-osv-scanner.sh  utils.sh
(+380 files in other folders)
