[workspace]
resolver = "2"
members = ["crates/*", "bindings/*"]

[workspace.package]
version = "0.11.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/lgtm-hq/Rustume"

[workspace.dependencies]
# Serialization
serde = { version = "=1.0.228", features = ["derive"] }
serde_json = "=1.0.149"

# Validation
validator = { version = "=0.18.1", features = ["derive"] }

# ID Generation
cuid2 = "=0.1.4"

# Date/Time
chrono = { version = "=0.4.43", features = ["serde"] }

# PDF Generation / Typst ecosystem
typst = "=0.14.2"
typst-pdf = "=0.14.2"
typst-render = "=0.14.2"
typst-assets = { version = "=0.14.2", features = ["fonts"] }

# HTML
ammonia = "=4.1.2"
scraper = "=0.20.0"
ego-tree = "=0.6.3"

# CSV (for LinkedIn import)
csv = "=1.4.0"

# ZIP (for LinkedIn import)
zip = "=2.4.2"

# Async
tokio = { version = "=1.49.0", features = [
  "rt",
  "rt-multi-thread",
  "sync",
  "macros",
  "signal",
] }
futures = "=0.3.31"

# Web server
axum = "=0.7.9"
tower = "=0.5.3"
tower-http = { version = "=0.6.8", features = [
  "cors",
  "limit",
  "compression-gzip",
  "trace",
] }

# WASM
wasm-bindgen = "=0.2.108"
serde-wasm-bindgen = "=0.6.5"
wasm-bindgen-futures = "=0.4.58"
js-sys = "=0.3.85"
web-sys = { version = "=0.3.85", features = [
  "Window",
  "Document",
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbRequest",
  "IdbTransaction",
] }

# Error handling
thiserror = "=1.0.69"
anyhow = "=1.0.100"

# Regex
regex = "=1.12.2"
once_cell = "=1.21.3"

# Logging
tracing = "=0.1.44"

# Testing
rstest = "=0.21.0"
proptest = "=1.9.0"

# Async trait
async-trait = "=0.1.89"

# OpenAPI
utoipa = { version = "=5.4.0", features = ["axum_extras"] }

# Caching
lru = "=0.16.3"
