[workspace]
resolver = "2"
members = ["crates/*", "bindings/*"]

[workspace.package]
version = "0.25.1"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/lgtm-hq/Rustume"

[workspace.dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Validation
validator = { version = "0.20", features = ["derive"] }

# ID Generation
cuid2 = "0.1"

# Date/Time
chrono = { version = "0.4", features = ["serde"] }

# PDF Generation / Typst ecosystem
typst = "0.14.2"
typst-pdf = "0.14.2"
typst-render = "0.14.2"
typst-assets = { version = "0.14.2", features = ["fonts"] }

# HTML
ammonia = "4"
scraper = "0.27"
ego-tree = "0.11"

# CSV (for LinkedIn import)
csv = "1.3"

# ZIP (for LinkedIn import)
zip = "8.0"

# Async
tokio = { version = "1", features = [
  "rt",
  "rt-multi-thread",
  "fs",
  "sync",
  "macros",
  "signal",
] }
futures = "0.3"

# Web server
axum = "0.8"
tower = "0.5"
tower-http = { version = "0.7", features = [
  "cors",
  "limit",
  "compression-gzip",
  "fs",
  "trace",
] }

# WASM
wasm-bindgen = "0.2"
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbRequest",
  "IdbTransaction",
] }

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Regex
regex = "1.10"
once_cell = "1.19"

# Logging
tracing = "0.1"

# Testing
rstest = "0.26"
proptest = "1.5"

# Async trait
async-trait = "0.1"

# OpenAPI
utoipa = { version = "5", features = ["axum_extras"] }

# Caching
lru = "0.18"

# Rate limiting
governor = "0.8"
dashmap = "6"

# Cloud / database
sqlx = { version = "0.9", default-features = false, features = [
  "runtime-tokio",
  "postgres",
  "macros",
  "migrate",
  "uuid",
  "chrono",
  "json",
  "derive",
  "tls-rustls-ring",
] }
uuid = { version = "1", features = ["v4", "serde"] }

# HTTP client (WorkOS)
reqwest = { version = "0.13", default-features = false, features = [
  "json",
  "rustls",
] }

# Cookies / sessions
axum-extra = { version = "0.12", features = ["cookie"] }

# Metrics
metrics = "0.24"
metrics-exporter-prometheus = "0.18"

# Error tracking
sentry = { version = "0.48.2", default-features = false, features = [
  "backtrace",
  "contexts",
  "panic",
  "reqwest",
  "rustls",
] }
sentry-tower = { version = "0.48.2", default-features = false, features = [
  "http",
] }
