# Rustume Python Configuration
# This file exists primarily to enable lintro for cross-language linting.
# The main project is Rust + TypeScript.

[project]
name = "rustume-lint"
version = "0.1.0"
description = "Linting configuration for Rustume"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }

# No Python dependencies - this is just for lintro tooling
dependencies = []

[dependency-groups]
lint = ["lintro>=0.51.4"]
test = ["pytest>=8.3"]

[tool.lintro]
line_length = 100
tool_order = "priority"

[tool.lintro.post_checks]
enabled = false

[tool.bandit]
exclude_dirs = [".venv", "venv"]
skips = ["B101", "B404", "B603", "B607", "B108"]
