[package]
name = "rustume-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Command-line interface for Rustume resume builder"

[[bin]]
name = "rustume"
path = "src/main.rs"

[dependencies]
rustume-schema = { path = "../schema" }
rustume-parser = { path = "../parser" }
rustume-render = { path = "../render" }
rustume-utils = { path = "../utils" }

# CLI
clap = { version = "=4.5.54", features = ["derive"] }

# Serialization
serde.workspace = true
serde_json.workspace = true

# Validation
validator.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "=0.3.22", features = ["env-filter"] }

[dev-dependencies]
assert_cmd = "=2.1.2"
predicates = "=3.1.3"
tempfile = "=3.24.0"
