[package]
name = "rustume-schema-macros"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Procedural macros for Rustume schema types"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full", "extra-traits"] }
quote = "1.0"
proc-macro2 = "1.0"
