[package]
name = "rustume-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HTTP API server for Rustume resume builder"

[lib]
name = "rustume_server"
path = "src/lib.rs"

[[bin]]
name = "rustume-server"
path = "src/main.rs"

[dependencies]
rustume-schema = { path = "../schema" }
rustume-parser = { path = "../parser" }
rustume-render = { path = "../render" }
rustume-utils = { path = "../utils" }

# Web server
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Validation
validator.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Logging
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Base64 for binary data in JSON
base64 = "0.22"

# Caching
lru.workspace = true

# OpenAPI / Swagger
utoipa.workspace = true
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }

# Cloud mode
sqlx.workspace = true
uuid.workspace = true
reqwest.workspace = true
axum-extra.workspace = true
cookie = "0.18"
hmac.workspace = true
metrics.workspace = true
sha2.workspace = true
subtle = "2"
metrics-exporter-prometheus.workspace = true
chrono.workspace = true
sentry.workspace = true
sentry-tower.workspace = true
governor.workspace = true
dashmap.workspace = true
zip = { version = "8.0", default-features = false, features = ["deflate"] }
urlencoding.workspace = true

# Use jemalloc on musl to avoid musl's slower default allocator
[target.'cfg(target_env = "musl")'.dependencies]
tikv-jemallocator = { version = "0.6", features = [
  "unprefixed_malloc_on_supported_platforms",
] }

[dev-dependencies]
reqwest = { workspace = true, features = ["json"] }
tempfile = "=3.27.0"
tower = { workspace = true, features = ["util"] }
http-body-util = "=0.1.4"
