[package]
name = "rustume-storage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Storage abstraction layer for Rustume"

[dependencies]
rustume-schema = { path = "../schema" }
serde.workspace = true
serde_json.workspace = true
async-trait.workspace = true
thiserror.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
wasm-bindgen-futures.workspace = true
js-sys.workspace = true
web-sys = { workspace = true, features = [
  "Window",
  "IdbFactory",
  "IdbDatabase",
  "IdbObjectStore",
  "IdbObjectStoreParameters",
  "IdbRequest",
  "IdbTransaction",
  "IdbTransactionMode",
  "IdbVersionChangeEvent",
  "DomException",
  "Event",
  "EventTarget",
] }

[dev-dependencies]
rstest.workspace = true
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
